# sportify-api

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: check_prerequisites.sh
scripts/sql/creation_database/: 001_federations.sql  002_people.sql  003_teams.sql  004_sample_data.sql  00_load_order.sql  01_countries_states_cities.sql  01_location.sql  02_people.sql  03_entities.sql  03_organizations.sql  04_categories.sql  04_federations.sql  05_teams.sql  06_leagues.sql  07_matches.sql  99_sample_data.sql  README.md  init-db.sh  migrate-db.sh  validate_db.sql
src/core/: database.py
src/scripts/sql/creation_database/: 00_all.sql  01_countries_states_cities.sql  02_people.sql  03_entities.sql  04_federations.sql  05_teams.sql  06_leagues.sql  07_matches.sql
src/sportifyapi/: README.md  main.py
src/sportifyapi/api/: __init__.py  deps.py
src/sportifyapi/api/controllers/: country.py  country_controller.py
src/sportifyapi/api/schemas/: country.py  country_schema.py
src/sportifyapi/core/: README.md  config.py  database.py
src/sportifyapi/docs/: ALEMBIC_GUIDE.md  COUNTRY_IMPLEMENTATION.md  GENERATE_MODELS_GUIDE.md  IMPLEMENTATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md
src/sportifyapi/domain/entities/: __init__.py  country.py
src/sportifyapi/domain/repositories/: __init__.py  country_repository.py  country_repository_interface.py
src/sportifyapi/infrastructure/: README.md  __init__.py
src/sportifyapi/models/: models.py
tests/: README.md
(+26 files in other folders)
