[project]
name = "sportifyapi"
version = "0.1.0"
description = ""
authors = [
    {name = "gsennaura",email = "g.sennaura@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
]

[tool.poetry]
packages = [{include = "sportifyapi", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
sqlacodegen = "^3.0.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
